* 2014-09-02 - marcus.klein@open-xchange.com

 - Fix for bug 31612: Using a new connection to config database to determine if a just created schema needs to be deleted again on context
                      creation failure.
 - Fix for bug 33401: Do not use representative context identifier for listing filestores with usage anymore because context could have been
                      deleted in the meantime. Try all context identifier of the given filestore context block.

* 2014-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 33956: Perform safe flush on socket output stream to not prevent reading returned SMTP return code if SMPT server closes
                      associated connection on its own immediately
 - Fix for bug 33967: Avoid 102 Processing interim responses for requests executed by USM component

* 2014-09-01 - marcus.klein@open-xchange.com

 - Fix for bug 34236: Marked xingsubscribe.properties in open-xchange-subscribe package as a configuration file.

* 2014-09-01 - tobias.friedrich@open-xchange.com

 - Fix for bug 32695: Try to lookup existing stored session during form login if auto-login is enabled

* 2014-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 34211: Properly request next page token using Google API

* 2014-08-28 - marc.arens@open-xchange.com

 - Fix for bug 33476: Silent fallback to LocalRealtimeCleanup, GlobalCleanup is done anyway via new CleanupMembershipListener

* 2014-08-28 - thorben.betten@open-xchange.com

 - Fix for bug 34206: Use proper detection for a thumbnail request

* 2014-08-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 34183: Make infostore driver available once "com.openexchange.infostore" is the only account for the user
 - Fix for bug 34092: Ensure source folder ID is known for event processing when moving files within infostore file storage

* 2014-08-27 - ioannis.chouklis@open-xchange.com
